feat: almost done
