# lib/api/models/ManualPost200Response.ts
@@ -1,0 +1,70 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * vol
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface ManualPost200Response
+ */
+export interface ManualPost200Response {
+    /**
+     * 
+     * @type {string}
+     * @memberof ManualPost200Response
+     */
+    buildOutput: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ManualPost200Response
+     */
+    error: string;
+}
+
+/**
+ * Check if a given object implements the ManualPost200Response interface.
+ */
+export function instanceOfManualPost200Response(value: object): value is ManualPost200Response {
+    if (!('buildOutput' in value) || value['buildOutput'] === undefined) return false;
+    if (!('error' in value) || value['error'] === undefined) return false;
+    return true;
+}
+
+export function ManualPost200ResponseFromJSON(json: any): ManualPost200Response {
+    return ManualPost200ResponseFromJSONTyped(json, false);
+}
+
+export function ManualPost200ResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): ManualPost200Response {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'buildOutput': json['buildOutput'],
+        'error': json['error'],
+    };
+}
+
+export function ManualPost200ResponseToJSON(value?: ManualPost200Response | null): any {
+    if (value == null) {
+        return value;
+    }
+    return {
+        
+        'buildOutput': value['buildOutput'],
+        'error': value['error'],
+    };
+}
+
